static/css3/custfrmt.css
@font-face {
    font-family: "Barlow-Regular";
    src: url("../font/brlw-rlar.woff");
}

@font-face {
    font-family: "Barlow-Bold";
    src: url("../font/brlw-bold.woff");
}

@font-face {
    font-family: "Barlow-Italic";
    src: url("../font/brlw-ital.woff");
}

@font-face {
    font-family: "Barlow-Bold-Italic";
    src: url("../font/brlw-bdit.woff");
}

.headelem {
    font-family: "Barlow-Bold";
}

.hugeelem {
    font-family: "Barlow-Bold-Italic";
}

.normelem {
    font-family: "Barlow-Regular";
}

.italelem {
    font-family: "Barlow-Italic";
}

.forggrin {
    background-color: rgb(32,192,160);
}

.headcard {
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.blcktint {
    color: #000000;
}

.noselect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

